# pythonic-garage-band

./: pyproject.toml
pythonic_grage_band/: garage_band.py  garage_band_class.py
pythonic_grage_band.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_garage_band.py  test_pythonic_grage_band.py
