[tool.poetry]
name = "pythonic-grage-band"
version = "0.1.0"
description = ""
authors = ["SivashaGitHub <sirajago@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
